updated comment on multicrab.cfg

--- a/NtupleMaker/crab/multicrab.cfg
+++ b/NtupleMaker/crab/multicrab.cfg
@@ -1,4 +1,12 @@
-# skeleton template crab config  (required)
+# ======================================================================= #
+# multicrab configuration to make the leptonTrees used for the Tag and Probe
+# analysis.  Multicrab works the same commands as crab except the "crab"
+# keyword is replaced by "multicra" (e.g. multicrab -cfg multicrab.cfg -create -submit).
+#
+# see: https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideMultiCrab 
+# ======================================================================= #
+
+# skeleton template crab config
 # ----------------------------------------------------------------------- #
 
 [MULTICRAB]
