updated comment on multicrab.cfg

--- a/NtupleMaker/crab/multicrab.cfg
+++ b/NtupleMaker/crab/multicrab.cfg
@@ -1,10 +1,12 @@
 # ======================================================================= #
-# multicrab configuration to make the leptonTrees used for the Tag and Probe
-# analysis.  Multicrab works the same commands as crab except the "crab"
-# keyword is replaced by "multicrab" (e.g. multicrab -cfg multicrab.cfg -create -submit).
+# Multicrab configuration used to make the leptonTrees for the Tag and Probe
+# analysis.  Multicrab works the with same commands as crab except the "crab"
+# keyword is replaced by "multicrab".
+# (e.g. multicrab -cfg multicrab.cfg -create -submit)
 #
 # see: https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideMultiCrab 
 # ======================================================================= #
+
 
 # skeleton template crab config
 # ----------------------------------------------------------------------- #
