--- a/NtupleMaker/crab/multicrab.cfg
+++ b/NtupleMaker/crab/multicrab.cfg
@@ -23,7 +23,7 @@ CRAB.use_server = 0
 # user fields
 USER.return_data    = 1
 USER.copy_data      = 0
-USER.ui_working_dir = /nfs-7/userdata/rwkelley/crab/leptonTrees/tnp_V00-00-00 
+USER.ui_working_dir = /nfs-7/userdata/rwkelley/crab/leptonTrees/tnp_V00-00-00_run3 
 
 # CMSSW fields
 CMSSW.output_file = leptonTree.root
@@ -34,7 +34,7 @@ CMSSW.output_file = leptonTree.root
 
 # CMSSW fields
 [COMMON]
-CMSSW.events_per_job          = 100000
+CMSSW.events_per_job          = 50000
 CMSSW.total_number_of_events  = -1
 
 # DY Fullsim
@@ -55,7 +55,7 @@ CMSSW.datasetpath  = /DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12-
 # CMSSW fields
 [COMMON]
 CMSSW.total_number_of_lumis = -1
-CMSSW.lumis_per_job         = 500
+CMSSW.lumis_per_job         = 250
 
 # muons 
 
@@ -80,6 +80,24 @@ CMSSW.datasetpath = /DoubleMu/Run2012C-PromptReco-v2/AOD
 [DoubleMu_Run2012D-PromptReco-v1_AOD]
 CMSSW.datasetpath = /DoubleMu/Run2012D-PromptReco-v1/AOD
 
+[SingleMu_Run2012A-recover-06Aug2012-v1_AOD]
+CMSSW.datasetpath = /SingleMu/Run2012A-recover-06Aug2012-v1/AOD
+
+[SingleMu_Run2012A-13Jul2012-v1_AOD]
+CMSSW.datasetpath = /SingleMu/Run2012A-13Jul2012-v1/AOD
+
+[SingleMu_Run2012B-13Jul2012-v1_AOD]
+CMSSW.datasetpath = /SingleMu/Run2012B-13Jul2012-v1/AOD
+
+[SingleMu_Run2012C-24Aug2012-v1_AOD]
+CMSSW.datasetpath = /SingleMu/Run2012C-24Aug2012-v1/AOD
+
+[SingleMu_Run2012C-PromptReco-v2_AOD]
+CMSSW.datasetpath = /SingleMu/Run2012C-PromptReco-v2/AOD
+
+[SingleMu_Run2012D-PromptReco-v1_AOD]
+CMSSW.datasetpath = /SingleMu/Run2012D-PromptReco-v1/AOD
+
 # electrons 
 
 [COMMON]
@@ -102,3 +120,21 @@ CMSSW.datasetpath = /DoubleElectron/Run2012C-PromptReco-v2/AOD
 
 [DoubleElectron_Run2012D-PromptReco-v1_AOD]
 CMSSW.datasetpath = /DoubleElectron/Run2012D-PromptReco-v1/AOD
+
+[SingleElectron_Run2012A-recover-06Aug2012-v1_AOD]
+CMSSW.datasetpath = /SingleElectron/Run2012A-recover-06Aug2012-v1/AOD
+
+[SingleElectron_Run2012A-13Jul2012-v1_AOD]
+CMSSW.datasetpath = /SingleElectron/Run2012A-13Jul2012-v1/AOD
+
+[SingleElectron_Run2012B-13Jul2012-v1_AOD]
+CMSSW.datasetpath = /SingleElectron/Run2012B-13Jul2012-v1/AOD
+
+[SingleElectron_Run2012C-24Aug2012-v1_AOD]
+CMSSW.datasetpath = /SingleElectron/Run2012C-24Aug2012-v1/AOD
+
+[SingleElectron_Run2012C-PromptReco-v2_AOD]
+CMSSW.datasetpath = /SingleElectron/Run2012C-PromptReco-v2/AOD
+
+[SingleElectron_Run2012D-PromptReco-v1_AOD]
+CMSSW.datasetpath = /SingleElectron/Run2012D-PromptReco-v1/AOD
