--- a/NtupleMaker/crab/multicrab.cfg
+++ b/NtupleMaker/crab/multicrab.cfg
@@ -1,5 +1,5 @@
 # ======================================================================= #
-# Multicrab configuration used to make the leptonTrees for the Tag and Probe
+# Multicrab configuration used to make the lepton_trees for the Tag and Probe
 # analysis.  Multicrab works the with same commands as crab except the "crab"
 # keyword is replaced by "multicrab".
 # (e.g. multicrab -cfg multicrab.cfg -create -submit)
@@ -23,10 +23,10 @@ CRAB.use_server = 0
 # user fields
 USER.return_data    = 1
 USER.copy_data      = 0
-USER.ui_working_dir = /nfs-7/userdata/rwkelley/crab/leptonTrees/tnp_V00-00-00_run3 
+USER.ui_working_dir = /nfs-7/userdata/rwkelley/crab/lepton_trees/tnp_V00-00-00 
 
 # CMSSW fields
-CMSSW.output_file = leptonTree.root
+CMSSW.output_file = lepton_tree.root
 
 # ======================================================================= #
 # MC
@@ -34,7 +34,7 @@ CMSSW.output_file = leptonTree.root
 
 # CMSSW fields
 [COMMON]
-CMSSW.events_per_job          = 50000
+CMSSW.events_per_job          = 100000
 CMSSW.total_number_of_events  = -1
 
 # DY Fullsim
