fixed output filename

--- a/NtupleMaker/crab/multicrab.cfg
+++ b/NtupleMaker/crab/multicrab.cfg
@@ -25,8 +25,8 @@ USER.return_data    = 1
 USER.copy_data      = 0
 USER.ui_working_dir = /nfs-7/userdata/rwkelley/crab/lepton_trees/tnp_V00-00-00 
 
-# CMSSW fields
-CMSSW.output_file = lepton_tree.root
+# CMSSW fields (DO NOT CHANGE THIS -- this is hard coded in Smurf code)
+CMSSW.output_file = leptonTree.root
 
 # ======================================================================= #
 # MC
@@ -55,7 +55,7 @@ CMSSW.datasetpath  = /DYJetsToLL_M-50_TuneZ2Star_8TeV-madgraph-tarball/Summer12-
 # CMSSW fields
 [COMMON]
 CMSSW.total_number_of_lumis = -1
-CMSSW.lumis_per_job         = 250
+CMSSW.lumis_per_job         = 200
 
 # muons 
 
